--- a/1501index.html
+++ b/1501index.html
@@ -4,15 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="flex.css">
-  <title>flex example</title>
+  <link rel="stylesheet" href="1501main.css">
+  <link rel="stylesheet" href="1501mq-900-plus.css" media="(min-width: 900px)">
+  <title>media query - 900+</title>
 </head>
-<body><header><div>001</div>
-  </header>
-
-  <div class="flex1">flex1</div>
-  <div class="flex2">flex2</div>
-  <div class="flex3">flex3</div>
-
+<body>
+  <h1>I am red at 900px or MORE</h1>
 </body>
 </html>
