--- a/above-fold/index1.html
+++ b/above-fold/index1.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href=rel="stylesheet" "https://fonts.googleapis.com/css?family=Cantarell:400,700|Kotta+One">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cantarell:400,700|Kotta+One">
   <link rel="stylesheet" href="main1.css">
+  <link rel="stylesheet" href="mq-800-plus.css" media="(min-width:800px)">
+
   <title>above the fold 2</title>
 </head>
 <body>
