adds position practice files

--- a/practice/position/1/index.html
+++ b/practice/position/1/index.html
@@ -65,45 +65,45 @@
     <section class="foo-link-col-01">
       <header>
         <h2>Footer link column 01</h2>
-        <a href="#">link 01</a>
-        <a href="#">link 02</a>
-        <a href="#">link 03</a>
-        <a href="#">link 04</a>
-        <a href="#">link 05</a>
-        <a href="#">link 06</a>
+        <ul><li><a href="#">link 01</a></li>
+        <li><a href="#">link 02</a></li>
+        <li><a href="#">link 03</a></li>
+        <li><a href="#">link 04</a></li>
+        <li><a href="#">link 05</a></li>
+        <li><a href="#">link 06</a></li></ul>
       </header>
     </section>
     <section class="foo-link-col-02">
       <header>
         <h2>Footer link column 02</h2>
-        <a href="#">link 01</a>
-        <a href="#">link 02</a>
-        <a href="#">link 03</a>
-        <a href="#">link 04</a>
-        <a href="#">link 05</a>
-        <a href="#">link 06</a>
+        <ul><li><a href="#">link 01</a></li>
+        <li><a href="#">link 02</a></li>
+        <li><a href="#">link 03</a></li>
+        <li><a href="#">link 04</a></li>
+        <li><a href="#">link 05</a></li>
+        <li><a href="#">link 06</a></li></ul>
       </header>
     </section>
     <section class="foo-link-col-03">
       <header>
         <h2>Footer link column 03</h2>
-        <a href="#">link 01</a>
-        <a href="#">link 02</a>
-        <a href="#">link 03</a>
-        <a href="#">link 04</a>
-        <a href="#">link 05</a>
-        <a href="#">link 06</a>
+        <ul><li><a href="#">link 01</a></li>
+        <li><a href="#">link 02</a></li>
+        <li><a href="#">link 03</a></li>
+        <li><a href="#">link 04</a></li>
+        <li><a href="#">link 05</a></li>
+        <li><a href="#">link 06</a></li></ul>
       </header>
     </section>
     <section class="foo-link-col-04">
       <header>
         <h2>Footer link column 04</h2>
-        <a href="#">link 01</a>
-        <a href="#">link 02</a>
-        <a href="#">link 03</a>
-        <a href="#">link 04</a>
-        <a href="#">link 05</a>
-        <a href="#">link 06</a>
+        <ul><li><a href="#">link 01</a></li>
+        <li><a href="#">link 02</a></li>
+        <li><a href="#">link 03</a></li>
+        <li><a href="#">link 04</a></li>
+        <li><a href="#">link 05</a></li>
+        <li><a href="#">link 06</a></li></ul>
       </header>
     </section>
   </footer>
