--- a/practice/layout stuff/4/index.html
+++ b/practice/layout stuff/4/index.html
@@ -6,13 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
   <title>simple layout practice using flexbox</title>
+  <script src="script.js"></script>
+
 </head>
 <body>
+
   <div class="container">
     <nav></nav>
     <div class="div1">
       <article></article>
-      <aside></aside>
+      <aside>
+        <button onclick="alert('hello guy lafleur')">Click here for Guy</button>
+        <script type="application/javascript">//alert('hello');</script>
+      </aside>
     </div>
     <footer></footer>
   </div>
