updates previous commit files

--- a/practice/layouts-2/3/index.html
+++ b/practice/layouts-2/3/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
   </header>
-  <div>HERO IMG</div><main>
+  <div><div>HERO IMG</div></div><main>
     <section>
       <article>ARTICLE</article>
     </section>
