--- a/practice/layouts-2/9 - recreate bbm/index.html
+++ b/practice/layouts-2/9 - recreate bbm/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Yanone+Kaffeesatz:400,700" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mq-640-880.css" media="(min-width:640px)">
@@ -14,17 +15,26 @@
 
   <header>
     <nav>
-      <div id="logo"></div>
-      <input type="checkbox" id="show-menu" role="button">
-      <ul id="top-nav">
-        <li><a href="#">Portfolio</a>
-          <ul class="hidden">
-            <li><a href="#">Portraits</a></li>
-            <li><a href="#">Portfolios</a></li>
-            <li><a href="#">Japanese Traditional</a></li>
-            <li><a href="#">Thematic</a></li>
-            <li><a href="#">Before & After</a></li>
-          </ul>
+      <div id="logo"><a href="index.html"></a></div>
+      <ul id="menu" class="drop">
+        <li><a href="#">Portfolio</a><!-- Begin Home Item -->
+          <div class="dropdown_2columns"><!-- Begin 2 columns container -->
+            <div class="col_1">
+              <a href="portraits.html"><h2>Portraits</h2></a>
+            </div>
+            <div class="col_1">
+              <a href="#"><h2>Portfolios</h2></a>
+            </div>
+            <div class="col_1">
+              <a href="#"><h2>Japanese</h2></a>
+            </div>
+            <div class="col_1">
+              <a href="#"><h2>Thematic</h2></a>
+            </div>
+            <div class="col_1">
+              <a href="#"><h2>B & A</h2></a>
+            </div>
+          </div><!-- End 2 columns container -->
         </li>
         <li><a href="#">Bio</a></li>
         <li><a href="#">Testimonials</a></li>
