--- a/practice/layouts-2/9 - recreate bbm/index.html
+++ b/practice/layouts-2/9 - recreate bbm/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Yanone+Kaffeesatz:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Yanone+Kaffeesatz:300,700" rel="stylesheet">
+  <link rel="stylesheet" href="mcleod-reset.css">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mq-640-880.css" media="(min-width:640px)">
@@ -15,8 +16,8 @@
 
   <header>
     <nav>
-      <div id="logo"><a href="index.html"></a></div>
-      <ul id="menu" class="drop">
+      <a href="index.html"><div id="logo"></div></a>
+      <ul id="menu" >
         <li><a href="#">Portfolio</a><!-- Begin Home Item -->
           <div class="dropdown_2columns"><!-- Begin 2 columns container -->
             <div class="col_1">
@@ -36,7 +37,7 @@
             </div>
           </div><!-- End 2 columns container -->
         </li>
-        <li><a href="#">Bio</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
