--- a/practice/layouts-2/9 - recreate bbm/portraits.html
+++ b/practice/layouts-2/9 - recreate bbm/portraits.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Yanone+Kaffeesatz:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Yanone+Kaffeesatz:300,700" rel="stylesheet">
+  <link rel="stylesheet" href="mcleod-reset.css">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="portraits.css">
+  <link rel="stylesheet" href="style.css">
   <title>Portraits</title>
 </head>
 <body>
   <header>
     <nav>
-      <div id="logo"><a href="index.html"></a></div>
+      <a href="index.html"><div id="logo"></div></a>
       <ul id="menu" class="drop">
         <li><a href="#">Portfolio</a><!-- Begin Home Item -->
           <div class="dropdown_2columns"><!-- Begin 2 columns container -->
@@ -33,7 +35,7 @@
             </div>
           </div><!-- End 2 columns container -->
         </li>
-        <li><a href="#">Bio</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -42,10 +44,11 @@
     <header>
       <h1>Portraits by Masayo</h1>
     </header>
-    <section>
-      <figure>
-        <img src="#" alt="">
-        <figcaption></figcaption>
+    <section id="port-sec-1">
+      <figure id="fig-1">
+        <img src="img/portraits/Musician-Portrait-Photographer-Stephen-James-min1.jpg" alt="">
+        <figcaption>Musician Portrait Model Milan Boronell, Photographer Stephen James
+BUSINESS, PERSONAL & FAMILY PORTRAITURE</figcaption>
       </figure>
       <figure>
         <img src="#" alt="">
