adds bbm recreate files

--- a/practice/layouts-2/9 - recreate bbm/about.html
+++ b/practice/layouts-2/9 - recreate bbm/about.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Yanone+Kaffeesatz:300,700" rel="stylesheet">
-  <link rel="stylesheet" href="mcleod-reset.css">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="style.css">
   <title>About</title>
@@ -44,9 +43,9 @@
     <section class="abt-sec-01">
       <article>
         <figure><img src="img/about/CJS-action_.jpg" alt=""></figure>
-        <p>I am a certified, professional makeup artist and the principal of Beauty by Masayo.   My base is the Greater Toronto Area though am available to travel to project locations.</p>
         <p>I am certified, with a diploma in Creative & Corrective Makeup Design from the School of Professional Makeup in Toronto, Canada. I also pursue ongoing training in traditional Japanese makeup techniques in Tokyo, Japan.</p>
         <p>As an artistic coordinator, my success depends heavily upon solving problems for clients and utilizing strong organization, communication and ‘soft’ people skills.</p>
+        <p>My base is the Greater Toronto Area though am available to travel to project locations.</p>
       </article>
     </section>
     <section class="abt-sec-02">
@@ -56,7 +55,7 @@
       <article>
         <figcaption>MATSURI Rocks Dundas Square</figcaption>
         <figure><img src="img/about/Japanese-Style-Festival-MATSURI-Rocks-Dundas-Square__.jpg" alt=""></figure>
-        <p>Uniquely skilled in authentic traditional Japanese makeup and styling. Specifically – maiko, geisha and kabuki.</p>
+        <p>My niche is in authentic, traditional Japanese makeup and styling - maiko, geisha and kabuki.</p>
         <p>My team includes a professional kimono dresser, trained in Japan in authentic kimono application.</p>
         <p>Together, we bring unique and authentic cultural experience to your organization’s cultural events.</p>
       </article>
@@ -67,7 +66,8 @@
       </header>
       <article>
         <figure><img src="img/about/Shut-the-World-Out__.jpg" alt=""></figure>
-        <figcaption>Shut the World Out music video, by Zameer</figcaption>
+        <figcaption>Shut the World Out music video - by Zameer</figcaption>
+        <p>I have experience working on local film sets, theatrical productions, fashion shows and music videos.</p>
         <p>On location means pressures of deadlines can extend over days of shooting. Teamwork and just-in-time problem-solving are as important as ever.</p>
         <p>However, it can also be fun! And seeing it all come together can bring a special satisfaction.</p>
       </article>
@@ -81,6 +81,7 @@
         <figcaption></figcaption>
         <p>Artistic coordinator and lead makeup artist in Toronto’s most successful photography workshop meetups.</p>
         <p>Working closely with professional photographers and models, I have lead my team to consistently providing professional, reliable and creative makeup and styling solutions for a wide variety of themes.</p>
+        <p>As of 2017 I started my own workshop and continue to focus on fashion photography, utilizing interesting and original themes in positive and professional settings.</p>
       </article>
     </section>
     <section class="abt-sec-05">
