adds layout practice files, magazine complete

--- a/practice/layouts-2/10-magazine/index.html
+++ b/practice/layouts-2/10-magazine/index.html
@@ -30,9 +30,7 @@
         </header>
       </article>
     </section>
-  </main>
-
-  <section id=idx-sec-2>
+  </main><section id=idx-sec-2>
     <article>
       <figure></figure>
       <h2></h2>
@@ -87,7 +85,7 @@
   <footer>
     <section>
       <h3></h3>
-      <ul>
+      <ul id="ftr-sec-1-lst">
         <li></li>
         <li></li>
         <li></li>
