adds files for layout practice :: basic webpage article layout :: ALSO FIXED (I THINK) THE PREVIOUS ISSUE WITH COMMITS NOT GOING THROUGH

--- a/practice/layouts-3/3-Basic Template  Style Guide/index.html
+++ b/practice/layouts-3/3-Basic Template  Style Guide/index.html
@@ -8,6 +8,91 @@
   <title>basic template layout</title>
 </head>
 <body>
-  
+  <div class="links-over-header">
+    <ul>
+      <li><a href="#">About</a></li>
+      <li>|</li>
+      <li><a href="#">Contact</a></li>
+      <li>|</li>
+      <li><a href="#">Client Login</a></li>
+    </ul>
+  </div>
+  <header>
+      <div class="hdr-logo">
+        <a href="#">Basic layout</a>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Why Us?</a></li>
+          <li><a href="#">Order Now</a></li>
+        </ul>
+      </nav>
+  </header>
+  <div class="breadcrumbs">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li>></li>
+      <li><a href="#">Breadcrumb #1</a></li>
+      <li>></li>
+      <li><a href="#">Breadcrumb #2</a></li>
+      <li>></li>
+      <li><a href="#">Breadcrumb #3</a></li>
+      <li>></li>
+      <li>Current Page</li>
+    </ul>
+  </div><main>
+    <article>
+      <h1>Page Title Main Heading</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quos iusto veniam quidem amet voluptatum magni ratione inventore nemo. Nulla, est, quibusdam! Recusandae totam laborum earum nesciunt et amet iusto!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem rerum vel quam perferendis sint, recusandae illum libero optio, assumenda iusto repellat in odit dolores expedita. In deserunt mollitia amet possimus.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta aut sequi saepe harum libero alias, veritatis ipsam voluptate laborum itaque fuga, voluptatibus delectus facilis ducimus, sunt odit nisi odio maxime.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores amet molestias ullam, pariatur voluptatem reiciendis autem nisi veritatis facere, optio, consequuntur nihil ut minima blanditiis doloremque corrupti voluptas. Quasi, aliquam.</p>
+    </article>
+  </main>
+  <footer class="footer-main">
+    <section>
+      <h2>Latest Updates</h2>
+      <figure></figure>
+    </section>
+    <section>
+      <h2>About</h2>
+      <ul>
+        <li><a href="#">Our Services</a></li>
+        <li><a href="#">Our Solutions</a></li>
+        <li><a href="#">Our Company</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Learn More</h2>
+      <ul>
+        <li><a href="#">Why Us?</a></li>
+        <li><a href="#">Support Center</a></li>
+        <li><a href="#">Glossary of Terms</a></li>
+        <li><a href="#">Returns Policy</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Get In Touch</h2>
+      <ul>
+        <li><a href="#">Toll Free (North America)</a></li>
+        <li><a href="#">International</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Social Media</a></li>
+      </ul>
+    </section>
+  </footer>
+  <section class="footer-ribbon">
+    <figure class="footer-logo">Footer Logo</figure>
+    <ul>
+      <li><a href="#">Sitemap <span> &#x02218; &#x02218; &#x02218;</span></a></li>
+      <li><a href="#">Legal</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+    </ul>
+  </section>
 </body>
 </html>
