adds whole bunch of html/css files, including new site files

--- a/above-fold/index.html
+++ b/above-fold/index.html
@@ -4,12 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- FAVICONS  -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png?v=9Byj7xkdJn">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png?v=9Byj7xkdJn">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png?v=9Byj7xkdJn">
+  <link rel="manifest" href="favicons/site.webmanifest?v=9Byj7xkdJn">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg?v=9Byj7xkdJn" color="#5bbad5">
+  <link rel="shortcut icon" href="favicons/favicon.ico?v=9Byj7xkdJn">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#ffffff">
   <link href=rel="stylesheet" "https://fonts.googleapis.com/css?family=Cantarell:400,700|Kotta+One">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="mq-800-plus.css" media="(min-width:800px)">
+  <link href="C:/Users/Scott-pc/Documents/fontawesome-free-5.0.9/web-fonts-with-css/css/fontawesome.css" rel="stylesheet">
+  <link href="C:/Users/Scott-pc/Documents/fontawesome-free-5.0.9/web-fonts-with-css/css/fa-regular.css" rel="stylesheet">
+  <link href="C:/Users/Scott-pc/Documents/fontawesome-free-5.0.9/web-fonts-with-css/css/fa-solid.css" rel="stylesheet">
+
   <title>above the fold page</title>
 </head>
 <body>
-
+  <nav>
+    <div id="idx-navbar-left">
+      <ul>
+        <li><svg class="c1"><use xlink:href="icons.svg#play-circle"></use></svg></li>
+        <li><svg class="c1"><use xlink:href="icons.svg#plus-circle"></use></svg></li>
+        <li><svg class="c1"><use xlink:href="icons.svg#twitter-square"></use></svg></li>
+        <li><svg class="c1"><use xlink:href="icons.svg#star"></use></svg></li>
+      </ul>
+    </div>
+    <ul id="idx-navbar-right">
+      <li><svg class="c2"><use xlink:href="icons.svg#play-circle"></use></svg></li>
+      <li><svg class="c2"><use xlink:href="icons.svg#plus-circle"></use></svg></li>
+      <li><svg class="c2"><use xlink:href="icons.svg#twitter-square"></use></svg></li>
+      <li><svg class="c2"><use xlink:href="icons.svg#star"></use></svg></li>
+    </ul>
+  </nav>
   <header>
     <main>
       <h1>RESPONSIVE FULL BACKGROUND IMAGE</h1>
@@ -18,9 +47,42 @@
         <h2>SECURE YOUR FUTURE</h2>
         <h2>LEARN TO CODE AND ALWAYS BE EMPLOYABLE</h2>
       </div>
-      <a href="#">BUILD YOUR FUTURE</a>
+      <button>BUILD YOUR FUTURE</button>
     </main>
   </header>
-
+  <ul>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+    <li>yada</li>
+  </ul>
+  <script src="svg4everybody.js"></script>
+  <script>svg4everybody();</script>
 </body>
 </html>
