adds updated files for new site

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -16,17 +16,34 @@
     </ul>
   </div>
   <header>
-    <div class="header-logo">Masayo logo</div>
+    <div class="header-logo"></div>
     <nav>
       <ul>
-        <li><a href="#">Japanese Traditional</a></li>
+        <li><a href="#">Traditional</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Arts</a></li>
         <li><a href="#">Studio</a></li>
       </ul>
     </nav>
-  </header>
+  </header><main><a href="#" id="idx-headshots-wrapper">
+        <div id="idx-headshots-hdr"><h1>Headshots</h1></div>
+        <section id="idx-headshots-box">
+          <p id="idx-headshots-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
+          <span id="idx-learn-link">Learn more...</span>
+          </p>
+        </section>
 
-</div>
+    </a>
+    <a href="#" id="idx-workshops-wrapper">
+        <div id="idx-workshops-hdr"><h1>Workshops</h1></div>
+        <section id="idx-workshops-box">
+          <p id="idx-workshops-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
+          <span id="idx-learn-link">Learn more...</span>
+          </p>
+        </section>
+
+    </a>
+  </main>
+</div> <!--  end of above the fold wrapper  -->
 </body>
 </html>
