--- a/new-site/index.html
+++ b/new-site/index.html
@@ -26,7 +26,7 @@
       </ul>
     </nav>
   </header><main><a href="#" id="idx-headshots-wrapper">
-        <div id="idx-headshots-hdr"><h1>Headshots</h1></div>
+        <div id="idx-headshots-hdr"><h1>Professional Headshots</h1></div>
         <section id="idx-headshots-box">
           <p id="idx-headshots-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
           <span id="idx-learn-link">Learn more...</span>
