adds new-site files, building lowest level pages

--- a/price tables/index.html
+++ b/price tables/index.html
@@ -24,8 +24,9 @@
         <li>500GB</li>
         <li>Lorem corem</li>
         <li>Ipsum dorum</li>
+        <li><a href="#">sign up</a></li>
       </ul>
-      <div id="cta-button"><a href="#">sign up</a></div>
+
     </section>
     <section id="column-02">
       <header id="title">
@@ -39,8 +40,9 @@
         <li>500GB</li>
         <li>Lorem corem</li>
         <li>Ipsum dorum</li>
+        <li><a href="#">sign up</a></li>
       </ul>
-      <div id="cta-button"><a href="#">sign   up</a></div>
+      
     </section>
     <section id="column-03">
       <header id="title">
@@ -54,8 +56,9 @@
         <li>500GB</li>
         <li>Lorem corem</li>
         <li>Ipsum dorum</li>
+        <li><a href="#">sign up</a></li>
       </ul>
-      <div id="cta-button"><a href="#">sign up</a></div>
+
     </section>
   </section>
 </body>
