adds updates for new site, font awesome

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -4,45 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
   <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
   <title>Professional Headshots |  Fashion Photo Workshops - Masayo Laing</title>
 </head>
 <body>
   <div id="idx-atf-wrapper">
-  <div class="admin-nav">
-    <ul>
-      <li><a href="#">Newsletter</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-  <header>
-    <div class="header-logo"></div>
-    <nav>
+
+  <header id="top-header">
+    <figure id="logo"><a href="index.html"></a></figure>
+    <nav id="top-nav">
       <ul>
-        <li><a href="#">Traditional</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Arts</a></li>
-        <li><a href="#">Studio</a></li>
+        <li><a href="headshots.html">Headshots</a></li>
+        <li><a href="workshops.html">Workshops</a></li>
+        <li><a href="live-events.html">Live Events</a></li>
+        <li><a href="local-business.html">Local Business</a></li>
       </ul>
     </nav>
+    <div id="top-admin-links">
+      <ul>
+        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
+        <li><a href="#">Something</a></li>
+        <li><a href="#">&#x0260E;Something</a></li>
+        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
+      </ul>
+    </div>
   </header><main><a href="#" id="idx-headshots-wrapper">
-        <div id="idx-headshots-hdr"><h1>Professional Headshots</h1></div>
+        <div id="idx-headshots-hdr"><a href="headshots.html">
+          <h1>Headshots</h1></a>
+        </div>
         <section id="idx-headshots-box">
           <p id="idx-headshots-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
           <span id="idx-learn-link">Learn more...</span>
           </p>
         </section>
-
     </a>
-    <a href="#" id="idx-workshops-wrapper">
+    <a href="workshops.html" id="idx-workshops-wrapper">
         <div id="idx-workshops-hdr"><h1>Workshops</h1></div>
         <section id="idx-workshops-box">
           <p id="idx-workshops-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
           <span id="idx-learn-link">Learn more...</span>
           </p>
         </section>
-
-    </a>
+      </a>
   </main>
 </div> <!--  end of above the fold wrapper  -->
 </body>
