--- a/new-site/workshops.html
+++ b/new-site/workshops.html
@@ -4,26 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="workshop-cta.css">
+  <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
+  <link rel="stylesheet" href="workshops.css">
+  <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
   <title>workshop call to action</title>
 </head>
 <body>
   <header id="top-header">
-    <div id="logo">logo here</div>
-    <!-- <img id="top-logo" src="img/Beauty-by-Masayo-website-1024x343.png" alt="logo of stylized cherry blossom with red leaves in side red circle"> -->
+    <figure id="logo"><a href="index.html"></a></figure>
     <nav id="top-nav">
       <ul>
-        <li><a href="#">Headshots</a></li>
-        <li><a href="#">Workshops</a></li>
-        <li><a href="#">Live Events</a></li>
-        <li><a href="#">Local Business</a></li>
+        <li><a href="headshots.html">Headshots</a></li>
+        <li><a href="workshops.html">Workshops</a></li>
+        <li><a href="live-events.html">Live Events</a></li>
+        <li><a href="local-business.html">Local Business</a></li>
       </ul>
     </nav>
     <div id="top-admin-links">
       <ul>
-        <li><a href="#">Newsletter</a></li>
+        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
         <li><a href="#">Something</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">&#x0260E;Something</a></li>
+        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
       </ul>
     </div>
   </header>
