--- a/new-site/headshots.html
+++ b/new-site/headshots.html
@@ -4,86 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="headshots.css">
-  <title>headshots</title>
+  <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
+  <link rel="stylesheet" href="workshops.css">
+  <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
+  <title>workshop call to action</title>
 </head>
 <body>
-
   <header id="top-header">
-    <div id="logo">logo here</div>
-    <!-- <img id="top-logo" src="img/Beauty-by-Masayo-website-1024x343.png" alt="logo of stylized cherry blossom with red leaves in side red circle"> -->
+    <figure id="logo"><a href="index.html"></a></figure>
     <nav id="top-nav">
       <ul>
-        <li><a href="#">Headshots</a></li>
-        <li><a href="#">Workshops</a></li>
-        <li><a href="#">Live Events</a></li>
-        <li><a href="#">Local Business</a></li>
+        <li></li>
+        <li><a href="headshots.html">Headshots</a></li>
+        <li><a href="workshops.html">Workshops</a></li>
+        <li><a href="live-events.html">Live Events</a></li>
+        <li><a href="local-business.html">Local Business</a></li>
       </ul>
     </nav>
     <div id="top-admin-links">
       <ul>
-        <li><a href="#">Newsletter</a></li>
+        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
         <li><a href="#">Something</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">&#x0260E;Something</a></li>
+        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
       </ul>
     </div>
   </header>
-
   <main>
-    <h1 id="page-title">Page Title Here</h1>
-    <section class="main-sec">
-      <article class="article">
-        <figure class="img-to-wrap"><img src="img/homepage-headshot-example.jpg" alt="article image wrap right example"><figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam magni laboriosam non asperiores.</figcaption></figure>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam blanditiis, architecto dicta, ratione perspiciatis, aut omnis consequuntur iste sed culpa consequatur pariatur alias ab recusandae nam tempora explicabo veritatis optio.</p>
+    <div id="col-left">
+      <section id="sidebar-cta">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus pariatur illo, dolorem commodi sint harum, veniam molestiae, eius dolore expedita fuga quis debitis mollitia, perspiciatis obcaecati ut maiores amet aut.</p>
+      </section>
+    </div>
+    <div id="col-right">
+      <div class="workshop-wrapper">
+        <section class="col-left">
+          <div id="pkg-container">
+              <figure id="img-wrk-ex-01"></figure>
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.!
+              </figcaption>
+            <section id="img-examples">
+              <div class="img-example">
+                <figure>
+                  <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ab ipsa tempore autem, recusandae explicabo numquam quae.</figcaption>
+                </figure>
+              </div>
+            </section>
+        </section>
+        </div>
+        <section class="col-right">
 
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam illo, odio quia sed quasi tenetur dicta animi odit cupiditate veritatis modi neque iusto impedit, ex accusantium ipsa assumenda. Tempore, quae.</p>
-        <h3 class="subheader-h3">Subheader</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa cum quia, dolorem consequatur dignissimos nobis at repudiandae molestias libero quidem rerum nostrum eligendi officia architecto neque blanditiis necessitatibus reiciendis ex!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ipsa veniam rerum blanditiis consectetur fuga beatae porro? Repudiandae distinctio, nobis quis quod voluptatem nisi, natus culpa tempora accusantium, fugit facere!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus tempora, magnam expedita corporis, reprehenderit commodi rerum dolor iure placeat quibusdam, odit repellendus, ut animi distinctio perspiciatis ea blanditiis eos perferendis!</p>
-        <h3 class="subheader-h3">Subheader</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati aliquam veniam tempore eligendi molestias, amet ipsa! Quasi adipisci inventore nihil! Repellendus laboriosam omnis veritatis molestiae reprehenderit perspiciatis quis iure magni.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, impedit, maxime voluptatum ratione necessitatibus, laudantium pariatur nihil aliquid rerum quod quae saepe deleniti consectetur sequi earum! Illum excepturi, sequi obcaecati?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi provident animi et necessitatibus ex odio placeat id cupiditate non, vero quasi, autem ea qui dolorum ab neque enim eum dolores.</p>
-      </article>
-    </section>
-    <aside id="aside-wrapper">
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-    </aside>
+        </section>
+      </div>
+    </div>
   </main>
-  <div id="left-sidebar">
-    <header id="sidebar-header">
-      <h2 id="sidebar-hdr-title">Sidebar Header</h2>
-    </header>
-    <section class="sidebar-sec">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eos, maiores voluptatibus est expedita quibusdam quae provident aut modi saepe dolores molestiae, adipisci veniam atque omnis eum quis consectetur itaque!</p>
-    </section>
-  </div>
 </body>
 </html>
