adds updates to new site

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -9,8 +9,7 @@
   <title>Professional Headshots |  Fashion Photo Workshops - Masayo Laing</title>
 </head>
 <body>
-  <div id="idx-atf-wrapper">
-
+  <div class="atf-wrapper">
   <header id="top-header">
     <figure id="logo"><a href="index.html"></a></figure>
     <nav id="top-nav">
@@ -18,7 +17,7 @@
         <li><a href="headshots.html">Headshots</a></li>
         <li><a href="workshops.html">Workshops</a></li>
         <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="local-business.html">Local Business</a></li>
+        <li><a href="commercial.html">Commercial</a></li>
       </ul>
     </nav>
     <div id="top-admin-links">
@@ -29,8 +28,13 @@
         <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
       </ul>
     </div>
-  </header><main><a href="#" id="idx-headshots-wrapper">
-        <div id="idx-headshots-hdr"><a href="headshots.html">
+  </header>
+  <svg viewbox="0 0 110 18">
+    <path fill="#9EAFFD" opacity="0.3" d="M10 30 V15 Q30 3 60 15 V30z" border="2px"/>
+    <path fill="rgba(255, 0, 0, 0.3)" d="M0 30 V12 Q30 17 55 12 T100 11 V30z" />
+  </svg>
+  <main><a href="headshots.html" id="idx-headshots-wrapper">
+        <div id="idx-headshots-hdr">
           <h1>Headshots</h1></a>
         </div>
         <section id="idx-headshots-box">
@@ -42,7 +46,8 @@
     <a href="workshops.html" id="idx-workshops-wrapper">
         <div id="idx-workshops-hdr"><h1>Workshops</h1></div>
         <section id="idx-workshops-box">
-          <p id="idx-workshops-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
+          <p id="idx-workshops-copy">Expand your portfolio with original and top-notch shoots.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
           <span id="idx-learn-link">Learn more...</span>
           </p>
         </section>
