--- a/new-site/workshops.html
+++ b/new-site/workshops.html
@@ -10,37 +10,61 @@
   <title>workshop call to action</title>
 </head>
 <body>
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <nav id="top-nav">
-      <ul>
-        <li><a href="headshots.html">Headshots</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="local-business.html">Local Business</a></li>
-      </ul>
-    </nav>
-    <div id="top-admin-links">
-      <ul>
-        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
-        <li><a href="#">Something</a></li>
-        <li><a href="#">&#x0260E;Something</a></li>
-        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
-      </ul>
-    </div>
-  </header>
-  <main>
-    <div id="col-left">
-      <section id="sidebar-cta">
+  <div class="atf-wrapper">
+    <header id="top-header">
+      <figure id="logo"><a href="index.html"></a></figure>
+      <nav id="top-nav">
+        <ul>
+          <li><a href="headshots.html">Headshots</a></li>
+          <li><a href="workshops.html">Workshops</a></li>
+          <li><a href="live-events.html">Live Events</a></li>
+          <li><a href="commercial.html">Commercial</a></li>
 
+        </ul>
+      </nav>
+      <div id="top-admin-links">
+        <ul>
+          <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
+          <li><a href="#">Something</a></li>
+          <li><a href="#">&#x0260E;Something</a></li>
+          <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
+        </ul>
+      </div>
+    </header>
+  <main>
+    <div class="left-sidebar">
+      <header>
+        <h2>Sidebar Header</h2>
+      </header>
+      <section class="left-sidebar-sec">
+        <p>This can contain universal highlights of information about your headshots services.</p>
+        <p>It can contain bullet point lists that highlight and provide easy scannability for the visitor, so they are more likely to see it. Like this: (although the following list is not styled and would look different in production)</p>
+        <ul class="left-sidebar-list">
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+        </ul>
+        <p>This sidebar can contain anything. It can also contain images, captions, paragraphers, headings, links and buttons.</p>
+        <ul class="left-sidebar-list">
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+        </ul>
+        <a class="left-sidebar-cta"href="#">call to action</a>
       </section>
     </div>
-    <div id="col-right">
       <div class="workshop-wrapper">
         <section class="col-left">
           <div id="pkg-container">
               <figure id="img-wrk-ex-01"></figure>
-              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.!
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               </figcaption>
             <section id="img-examples">
               <div class="img-example">
@@ -51,11 +75,85 @@
             </section>
         </section>
         </div>
-        <section class="col-right">
 
-        </section>
-      </div>
+    <div class="right-sidebar">
+      <header>
+        <h2>Sidebar Header</h2>
+      </header>
+      <section class="right-sidebar-sec">
+        <p>This can contain universal highlights of information about your headshots services.</p>
+        <p>It can contain bullet point lists that highlight and provide easy scannability for the visitor, so they are more likely to see it. Like this: (although the following list is not styled and would look different in production)</p>
+        <ul class="right-sidebar-list">
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+        </ul>
+        <a href="#">this is a link</a>
+
+        <p>This sidebar can contain anything. It can also contain images, captions, paragraphers, headings, links and buttons.</p>
+        <ul class="right-sidebar-list">
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+          <li>stuff goes here</li>
+          <li>can be a link</li>
+          <li>stuff goes here</li>
+        </ul>
+        <a href="#">this is a link</a>
+
+      </section>
     </div>
   </main>
+</div>
+  <aside class="aside-wrapper">
+    <section class="aside-sec" id="aside-sec-01">
+      <header>
+        <h3>Related to workshop</h3>
+
+      </header>
+      <figure></figure>
+      <figcaption>caption goes here</figcaption>
+      <ul>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+      </ul>
+      <a href="#">this is a link</a>
+    </section>
+    <section class="aside-sec" id="aside-sec-02">
+      <header>
+        <h3>Related to workshop</h3>
+      </header>
+      <figure></figure>
+      <figcaption>caption goes here</figcaption>
+      <ul>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+      </ul>
+      <a href="#">this is a link</a>
+    </section>
+    <section class="aside-sec" id="aside-sec-03">
+      <header>
+        <h3>Related to workshop</h3>
+      </header>
+      <figure></figure>
+      <figcaption>caption goes here</figcaption>
+      <ul>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+        <li>some highlights</li>
+      </ul>
+      <a href="#">this is a link</a>
+    </section>
+  </aside>
+</div>
 </body>
 </html>
