--- a/font-awesome/basic.html
+++ b/font-awesome/basic.html
@@ -8,6 +8,21 @@
   <title>basic svg shapes</title>
 </head>
 <body>
+  <svg width="500" height="450" version="1.1" xmlns="http://www.w3.org/2000/svg">
+    <rect x="100" y="100" width="130" height="130" stroke="black" fill="transparent" stroke-width="5"/>
+    <rect x="60" y="10" rx="10" ry="10" width="30" height="30" stroke="black" fill="transparent" stroke-width="5"/>
 
+    <circle cx="25" cy="75" r="20" stroke="red" fill="transparent" stroke-width="5"/>
+    <ellipse cx="75" cy="75" rx="20" ry="5" stroke="red" fill="transparent" stroke-width="5"/>
+
+    <line x1="10" x2="50" y1="110" y2="150" stroke="orange" stroke-width="5"/>
+    <polyline points="60 110 65 120 70 115 75 130 80 125 85 140 90 135 95 150 100 145"
+        stroke="orange" fill="transparent" stroke-width="5"/>
+
+    <polygon points="1000 2100 1050 2300 1200 2300 1100 2400 1150 2550 1000 2450 850 2550 900 2400 800 2300 950 2300"
+        stroke="green" fill="transparent" stroke-width="5"/>
+
+    <path d="M20,230 Q40,205 50,230 T90,230" fill="none" stroke="blue" stroke-width="5"/>
+  </svg>
 </body>
 </html>
