--- a/new-site/live-events.html
+++ b/new-site/live-events.html
@@ -6,20 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
   <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
-  <link rel="stylesheet" href="live-local.css">
-
+  <link rel="stylesheet" href="live-events.css">
   <title>headshots</title>
 </head>
 <body>
+  <div class="atf-wrapper">
   <header id="top-header">
     <figure id="logo"><a href="index.html"></a></figure>
     <nav id="top-nav">
       <ul>
-        <li></li>
         <li><a href="headshots.html">Headshots</a></li>
         <li><a href="workshops.html">Workshops</a></li>
         <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="local-business.html">Local Business</a></li>
+        <li><a href="commercial.html">Commercial</a></li>
       </ul>
     </nav>
     <div id="top-admin-links">
@@ -33,10 +32,10 @@
   </header>
 
   <main>
-    <h1 id="page-title">Page Title Here</h1>
+    <h1 class="main-title">Page Title Here</h1>
     <section class="main-sec">
-      <article class="article">
-        <figure class="img-to-wrap"><img src="img/headshot-front-page.jpg" alt="article image wrap right example"><figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam magni laboriosam non asperiores.</figcaption></figure>
+      <article class="main-article">
+        <figure class="main-img"><img src="img/headshot-front-page.jpg" alt="article image wrap right example"><figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam magni laboriosam non asperiores.</figcaption></figure>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam blanditiis, architecto dicta, ratione perspiciatis, aut omnis consequuntur iste sed culpa consequatur pariatur alias ab recusandae nam tempora explicabo veritatis optio.</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus pariatur illo, dolorem commodi sint harum, veniam molestiae, eius dolore expedita fuga quis debitis mollitia, perspiciatis obcaecati ut maiores amet aut.</p>
@@ -53,38 +52,58 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi provident animi et necessitatibus ex odio placeat id cupiditate non, vero quasi, autem ea qui dolorum ab neque enim eum dolores.</p>
       </article>
     </section>
-    <aside id="aside-wrapper">
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-      <section class="aside-sec"><h3>Aside section</h3>
-        <ul>
-          <li>something here 01</li>
-          <li>something here 02</li>
-          <li>something here 03</li>
-          <li>something here 04</li>
-        </ul>
-      </section>
-    </aside>
   </main>
-  <div id="left-sidebar">
-    <header id="sidebar-header">
-      <h2 id="sidebar-hdr-title">Sidebar Header</h2>
+</div>
+<aside class="aside-wrapper">
+  <section class="aside-sec" id="aside-sec-01">
+    <header>
+      <h3>Related to workshop</h3>
+
     </header>
-    <section class="sidebar-sec">
+    <figure></figure>
+    <figcaption>caption goes here</figcaption>
+    <ul>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+    </ul>
+    <a href="#">this is a link</a>
+  </section>
+  <section class="aside-sec" id="aside-sec-02">
+    <header>
+      <h3>Related to workshop</h3>
+    </header>
+    <figure></figure>
+    <figcaption>caption goes here</figcaption>
+    <ul>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+    </ul>
+    <a href="#">this is a link</a>
+  </section>
+  <section class="aside-sec" id="aside-sec-03">
+    <header>
+      <h3>Related to workshop</h3>
+    </header>
+    <figure></figure>
+    <figcaption>caption goes here</figcaption>
+    <ul>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+    </ul>
+    <a href="#">this is a link</a>
+  </section>
+</aside>
+  <div class="left-sidebar">
+    <header>
+      <h2>Sidebar Header</h2>
+    </header>
+    <section class="left-sidebar-sec">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eos, maiores voluptatibus est expedita quibusdam quae provident aut modi saepe dolores molestiae, adipisci veniam atque omnis eum quis consectetur itaque!</p>
     </section>
   </div>
